--- a/src/Mzayad.Web/Views/Account/Register.cshtml
+++ b/src/Mzayad.Web/Views/Account/Register.cshtml
@@ -150,10 +150,24 @@
 
             $(function() {
 
+                $.datepicker._generateMonthYearHeader_original = $.datepicker._generateMonthYearHeader;
+
+                $.datepicker._generateMonthYearHeader = function(inst, dm, dy, mnd, mxd, s, mn, mns) {
+                    var header = $($.datepicker._generateMonthYearHeader_original(inst, dm, dy, mnd, mxd, s, mn, mns)),
+                        years = header.find('.ui-datepicker-year');
+
+                    // reverse the years
+                    years.html(Array.prototype.reverse.apply(years.children()));
+
+                    // return our new html
+                    return $('<div />').append(header).html();
+                }
+
                 $(".date-picker").datepicker({
                     changeMonth: true,
                     changeYear: true,
-                    dateFormat: "dd/mm/yy"
+                    dateFormat: "dd/mm/yy",
+                    yearRange: "-80:+0"
                 });
 
                 bindEvents();
