MZ-119 update cloudflare cdn to use https

--- a/src/Mzayad.Web/Views/Prize/Index.cshtml
+++ b/src/Mzayad.Web/Views/Prize/Index.cshtml
@@ -48,7 +48,7 @@
 {
     <script src="//cdn.jsdelivr.net/alertifyjs/1.8.0/alertify.min.js"></script>
     <script src="~/Scripts/Winwheel.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
     <script>
         var message = "";
         var type = 0;
