MZ-196 user's Inbox

--- a/src/Mzayad.Web/Views/Shared/_Layout_UserMyAccount.cshtml
+++ b/src/Mzayad.Web/Views/Shared/_Layout_UserMyAccount.cshtml
@@ -27,6 +27,7 @@
             <li><a href="@Url.Action("Trophies", "User", routeValues)"><i class="fa fa-fw fa-pad-right fa-trophy"></i>@Global.Trophies</a></li>
             <li><a href="@Url.Action("Index","WishList", routeValues)"><i class="fa fa-fw fa-pad-right fa-star"></i>@Global.MyWishList</a></li>
             <li><a href="@Url.Action("Requests","Friends", routeValues)"><i class="fa fa-fw fa-pad-right fa-users"></i>@Global.FriendRequests<span class="badge badge-notify">@count</span></a></li>
+            <li><a href="@Url.Action("Inbox","User", routeValues)"><i class="fa fa-fw fa-pad-right fa-envelope"></i>@Global.Inbox</a></li>
             <li>
                 <a href="javascript:document.getElementById('signout').submit();"><i class="fa fa-fw fa-pad-right fa-sign-out"></i>@Global.SignOut</a>
                 @using (Html.BeginForm("SignOut", "Account", new { area = "", language = Html.Language() }, FormMethod.Post, new { id = "signout" }))
