MZ-229 fix auction timezone bug

--- a/src/Mzayad.Web/Views/Shared/EditorTemplates/DateTimePicker.cshtml
+++ b/src/Mzayad.Web/Views/Shared/EditorTemplates/DateTimePicker.cshtml
@@ -1,18 +1,15 @@
 ﻿@model DateTime?
 @{
     var date = "";
-    var dateTime = "";
+    const string dateTime = "";
     int? hour = null;
     int? minute = null;
 
     if (Model.HasValue)
     {
-        var astDate = Model.Value;
-        astDate = astDate.AddHours(-3);
-        date = astDate.ToString("dd/MM/yyyy");
-        dateTime = astDate.AddHours(-3).ToString("u"); // AST -> UTC
-        hour = astDate.Hour;
-        minute = astDate.Minute;
+        date = Model.Value.ToString("dd/MM/yyyy");
+        hour = Model.Value.Hour;
+        minute = Model.Value.Minute;
     }
 }
 
