MZ-230 fix auction end bug

--- a/src/Mzayad.Web/Views/Home/Index.cshtml
+++ b/src/Mzayad.Web/Views/Home/Index.cshtml
@@ -356,6 +356,8 @@ else
                     auction.closeAuction();
                     if (userId === "@User.Identity.GetUserId()") {
                         auction.redirectOrder(orderId);
+                    } else {
+                        location.reload();
                     }
                 }
             }
